
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.hospital.grpc";
option java_outer_classname = "HospitalProto";

package hospital;

service HospitalService {
  rpc CreateHospital(HospitalRequest) returns (HospitalResponse);
}

message HospitalRequest {
  int64 id = 1;
  string name = 2;
  string address = 3;
}

message HospitalResponse {
  int64 id = 1;
  string name = 2;
  string address = 3;
}
